# research

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
aidc-progress-studio/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.ps1  run.sh
aidc-progress-studio/src/aidc_progress_studio/: __init__.py  agent.py  api.py  cli.py  instructions.py  models.py  provider.py  render.py  service.py  sources.py  store.py
aidc-progress-studio/src/aidc_progress_studio/static/: app.js  index.html  style.css
aidc-progress-studio/tests/: test_studio.py
docs/: aidc-progress-agent.md  aidc-progress-instructions.md  architecture.md  azure-openai-az-login.md  deepseek-openai-compatible.md  event-stream.md  handoff-semantics.md  implementation-roadmap.md  json-contracts.md  openai-agents-handoff-alignment.md  pipeline-v0.1.md  pipeline-v0.2.md  pipeline-v0.3.md  prompter-interface.md  restart-web-windows.md  restart-web.md  stage-index.md  stage-instructions-secondary-market-analyst.md  stage-prompts-secondary-market-analyst.md  thought-state-graph-engine.md  web-ui.md
examples/: pipeline_trace_example.json
scripts/: restart_web.ps1  restart_web.sh
tests/: demo_aidc_progress_agent.py  demo_pipeline_v02.py  demo_pipeline_v03.py  demo_pipeline_v03_azure.py  demo_pipeline_v03_deepseek.py  demo_secondary_market_stage_flow.py  test_aidc_progress_core.py  test_azure_openai_client.py  test_deepseek_client.py  test_event_stream.py  test_graph_adapter.py  test_llm_pipeline.py  test_mock_pipeline.py  test_restart_web_powershell_probe.py  test_restart_web_powershell_script.py  test_restart_web_probe_transport.py  test_restart_web_script.py  test_secondary_market_handoff_router.py  test_secondary_market_stage_flow.py  (+3 more)
(+63 files in other folders)
