[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidc-progress-studio"
version = "0.1.0"
description = "Standalone AIDC project progress research app with an interactive web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai-agents>=0.18.2,<0.19.0",
  "openai>=2.25.0",
  "azure-identity>=1.16.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
aidc-progress-studio = "aidc_progress_studio.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aidc_progress_studio = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
